# gwtx

./: .dockerignore  .gwtx.example.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  cliff.toml  clippy.toml  deny.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.test  entrypoint.sh
examples/: README.md  basic.toml  basic.yaml  branch-template.yaml  coding-agent.toml  coding-agent.yaml  glob-patterns.toml  glob-patterns.yaml  hooks-basic.toml  hooks-basic.yaml  minimal.toml  minimal.yaml  mise-direnv.toml  mise-direnv.yaml  nodejs-project.toml  nodejs-project.yaml  rust-project.toml  rust-project.yaml  worktree-path.toml  worktree-path.yaml
schema/: gwtx.schema.json  kabu.schema.json
scripts/: run-integration-tests.sh
src/: cli.rs  color.rs  command.rs  config.rs  error.rs  git.rs  hook.rs  init.rs  interactive.rs  main.rs  operation.rs  output.rs  prompt.rs  trust.rs  vcs.rs
src/command/: add.rs  cd.rs  completions.rs  config.rs  init.rs  list.rs  man.rs  path.rs  remove.rs  schema.rs  switch.rs  trust.rs  trust_check.rs  untrust.rs  validate.rs
src/init/: gwtx.bash  gwtx.elv  gwtx.fish  gwtx.ps1  gwtx.zsh  kabu.bash  kabu.elv  kabu.fish  kabu.ps1  kabu.zsh
src/interactive/: add.rs  conflict.rs  path.rs  remove.rs  select.rs  worktree_list.rs
src/operation/: conflict.rs  copy.rs  link.rs  mkdir.rs
src/vcs/: detect.rs  git.rs  jj.rs
tests/integration/: add.rs  common.rs  config.rs  hooks.rs  jj_add.rs  jj_list.rs  jj_remove.rs  list.rs  main.rs  remove.rs  trust.rs
tests/integration/common/: fixtures.rs  jj_test_repo.rs  mod.rs  test_repo.rs
