[package]
name = "gwtx"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "git worktree extra - CLI tool to enhance git worktree with automated setup tasks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/h-michael/gwtx"
homepage = "https://github.com/h-michael/gwtx"
readme = "README.md"
keywords = ["git", "worktree", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    ".github/",
    ".gwtx.example.toml",
]

[[bin]]
name = "gwtx"
path = "src/main.rs"

[features]
default = []
libgit2 = ["dep:git2"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
thiserror = "2"
inquire = "0.9"
ctrlc = { version = "3", features = ["termination"] }
clap_complete = "4"
clap_mangen = "0.2"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"], optional = true }

[dev-dependencies]
tempfile = "3"
