[package]
name = "gwtx"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "git worktree extra - CLI tool to enhance git worktree with automated setup tasks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/h-michael/gwtx"
homepage = "https://github.com/h-michael/gwtx"
readme = "README.md"
keywords = ["git", "worktree", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    ".github/",
]

[[bin]]
name = "gwtx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1"
thiserror = "2"
inquire = "0.9"
ctrlc = { version = "3", features = ["termination"] }
clap_complete = "4"
clap_mangen = "0.2"
globset = "0.4"
walkdir = "2"
sha2 = "0.10"
dirs = "6"
chrono = "0.4"
owo-colors = "4"

[target.'cfg(unix)'.dependencies]
skim = "1.5"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "warn"
unreachable = "deny"
